mopidy-soundcloud (2.0.0-2) unstable; urgency=medium

  * Build-Depend on mopidy, so it doesn't have to be included in
    pydist-overrides.
  * Build-Depend on debhelper 9.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Tue, 18 Aug 2015 13:48:24 +0200

mopidy-soundcloud (2.0.0-1) unstable; urgency=medium

  * New upstream release.
  * Update watch file.
  * Update copyright years.
  * Bump Standards-Version to 3.9.6.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Fri, 27 Mar 2015 13:45:01 +0100

mopidy-soundcloud (1.2.5-1) unstable; urgency=medium

  * New upstream release.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Tue, 24 Jun 2014 19:28:59 +0200

mopidy-soundcloud (1.2.4-1) unstable; urgency=medium

  * New upstream release.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Thu, 15 May 2014 14:01:06 +0200

mopidy-soundcloud (1.2.3-1) unstable; urgency=medium

  * New upstrem release.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Fri, 02 May 2014 10:56:21 +0200

mopidy-soundcloud (1.2.1-2) unstable; urgency=low

  * Add missing dependency on gstreamer0.10-plugins-ugly. (Closes: #741317)

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Tue, 11 Mar 2014 22:12:44 +0100

mopidy-soundcloud (1.2.1-1) unstable; urgency=low

  * New upstream release.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Fri, 21 Feb 2014 10:26:07 +0100

mopidy-soundcloud (1.2.0-1) unstable; urgency=low

  * New upstream release.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Sun, 16 Feb 2014 22:51:07 +0100

mopidy-soundcloud (1.1.0-1) unstable; urgency=low

  * New upstream release.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Wed, 22 Jan 2014 21:47:38 +0100

mopidy-soundcloud (1.0.18-1) unstable; urgency=low

  * New upstream release.
  * Bump Standards-Version to 3.9.5.
  * Update copyright year.
  * Upload to unstable.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Sat, 11 Jan 2014 23:04:32 +0100

mopidy-soundcloud (1.0.16-0mopidy3) unstable; urgency=low
