@@ -3,6 +3,7 @@ mopidy-soundcloud (2.0.0-2) unstable; urgency=medium
   * Build-Depend on mopidy, so it doesn't have to be included in
     pydist-overrides.
   * Build-Depend on debhelper 9.
+  * Switch build system to pybuild.
 
  -- Stein Magnus Jodal <stein.magnus@jodal.no>  Tue, 18 Aug 2015 13:48:24 +0200
 
